Fixed some server bugs and updated front end getCalendar
